# Project_Desiderium

./: .dockerignore  .env.example  .gitignore  AGENT_RULES.md  Dockerfile  Dockerfile.prod  INIT_PROMPT.md  Makefile  OPS.md  README.md  RECOVERY.md  cursor-comm-log.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: memory-bank-protocol.mdc
.github/workflows/: check.yml
.paradigma/: config.yaml
app/: __init__.py  config.py  db.py  logging_config.py  main.py  models.py  worker.py
app/domain/: cluster_constraints.py  interfaces.py  membership_policy.py  publication_metrics.py  source_confidence.py  trend_metrics.py  youtube_url.py
app/jobs/: crawl_tasks.py  mutex.py  ops_tasks.py  publication_tasks.py  scheduler.py  semantic_tasks.py  tiktok_tasks.py  transcript_tasks.py  trend_tasks.py
app/repositories/: analysis_runs.py  baselines.py  briefs.py  content.py  creative_angles.py  daily_candidates.py  metrics.py  ops.py  publication_records.py  transcripts.py  trends.py  watchlist.py
app/schemas/: semantic.py  watchlist.py
app/services/: admin_candidates.py  admin_history.py  admin_trends.py  angle_dedup.py  angle_status.py  baseline.py  brief_export.py  candidate_generation.py  clustering.py  config_validation.py  evidence.py  ingestion.py  lifecycle.py  llm_config.py  llm_usage.py  ops_status.py  performance_analytics.py  publication_metrics.py  quota_tracker.py  relevance.py  run_metadata.py  scoring.py  scoring_config.py  semantic_analysis.py  snapshot_retention.py  snapshots.py  system_health.py  tiktok_ingestion.py  transcripts.py  trend_consistency.py  trend_discovery.py  watchlist.py
app/web/: csrf.py  deps.py  middleware.py  session.py
config/: anime_entities.yaml  llm.yaml  logrotate.desiderium  scoring.yaml  tiktok.yaml
config/prompts/: cluster_adjudication_v1.yaml  creative_angles_v1.yaml  format_classification_v1.yaml  title_translation_v1.yaml  trend_naming_v1.yaml  why_trending_v1.yaml
data/shadow/: fetch_meta.json  golden_dataset.csv  golden_dataset.json  raw_videos.json  validation_report.md
deploy/caddy/: Caddyfile
deploy/systemd/: desiderium-web.service  desiderium-worker.service
docs/rfc/: index.md
migrations/: env.py
scripts/: backup.sh  check_migration_head.py  disk_monitor.sh  optimize_db_indexes.py  restore.sh
tests/: test_health.py
(+165 files in other folders)
